[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
default-run = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "2022"
path = "src/aoc2022/main.rs"

[dependencies]
chumsky = "1.0.0-alpha.3"
paste = "1"

[profile.release]
strip = true
lto = true
panic = 'abort'

[dev-dependencies]
rstest = "0.17.0"
